# ProjectCode

./: .README.swp  .gitignore  CMakeLists.txt  ConfigFile.config  README  hello  main.cpp  main.cpp.autosave
Doxy/: Doxyfile  doxygen_sqlite3.db
Doxy/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _functions_8cpp.html  _functions_8cpp.js  _functions_8cpp__incl.map  _functions_8cpp__incl.md5  _functions_8cpp_source.html  _functions_8h.html  _functions_8h.js  _functions_8h__dep__incl.map  _functions_8h__dep__incl.md5  _functions_8h__incl.map  _functions_8h__incl.md5  _functions_8h_source.html  _thesis_2test_8py.html  _thesis_2test_8py_source.html  annotated.html  annotated.js  class_hull_const-members.html  class_hull_const.html  class_hull_const.js  class_main_window-members.html  class_main_window.html  class_normal_est_const-members.html  class_normal_est_const.html  class_normal_est_const.js  class_projection-members.html  class_projection.html  class_projection.js  class_region_growing_const-members.html  class_region_growing_const.html  class_region_growing_const.js  class_s_a_c_seg_const-members.html  class_s_a_c_seg_const.html  class_s_a_c_seg_const.js  class_triangulation_const-members.html  class_triangulation_const.html  class_triangulation_const.js  (+152 more)
Doxy/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+21 more)
Thesis/: Corners.xyz  Corners2.xyz  creatingBox.py  test.py  thing.xyz  thing2.xyz
UI/: mainwindow.ui
includes/: Functions.h  cloudoperations.h  constants.h  displayptcloud.h  mainwindow.h  projection.h  segmentor.h  timedate.h
mesh/PLY/: NOTE.txt  test.py
ptClouds/: txt.txt
src/: Functions.cpp  cloudoperations.cpp  displayptcloud.cpp  extra_functions  mainwindow.cpp  projection.cpp  segmentor.cpp  segmentor.cpp.autosave  timedate.cpp
